@@ -84,6 +84,22 @@ name|analysis
 operator|.
 name|tokenattributes
 operator|.
+name|OffsetAttribute
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|analysis
+operator|.
+name|tokenattributes
+operator|.
 name|PositionIncrementAttribute
 import|;
 end_import
@@ -201,7 +217,7 @@ comment|// TODO: maybe also toFST?  then we can translate atts into FST outputs/
 end_comment
 
 begin_comment
-comment|/** Consumes a TokenStream and creates an {@link Automaton}  *  where the transition labels are UTF8 bytes from the {@link  *  TermToBytesRefAttribute}.  Between tokens we insert  *  POS_SEP and for holes we insert HOLE.  */
+comment|/** Consumes a TokenStream and creates an {@link Automaton}  *  where the transition labels are UTF8 bytes from the {@link  *  TermToBytesRefAttribute}.  Between tokens we insert  *  POS_SEP and for holes we insert HOLE.  *  * @lucene.experimental */
 end_comment
 
 begin_class
@@ -379,6 +395,19 @@ name|class
 argument_list|)
 decl_stmt|;
 specifier|final
+name|OffsetAttribute
+name|offsetAtt
+init|=
+name|in
+operator|.
+name|addAttribute
+argument_list|(
+name|OffsetAttribute
+operator|.
+name|class
+argument_list|)
+decl_stmt|;
+specifier|final
 name|BytesRef
 name|term
 init|=
@@ -415,6 +444,11 @@ name|Position
 name|posData
 init|=
 literal|null
+decl_stmt|;
+name|int
+name|maxOffset
+init|=
+literal|0
 decl_stmt|;
 while|while
 condition|(
@@ -719,6 +753,54 @@ operator|=
 name|nextState
 expr_stmt|;
 block|}
+name|maxOffset
+operator|=
+name|Math
+operator|.
+name|max
+argument_list|(
+name|maxOffset
+argument_list|,
+name|offsetAtt
+operator|.
+name|endOffset
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
+name|in
+operator|.
+name|end
+argument_list|()
+expr_stmt|;
+name|State
+name|endState
+init|=
+literal|null
+decl_stmt|;
+if|if
+condition|(
+name|offsetAtt
+operator|.
+name|endOffset
+argument_list|()
+operator|>
+name|maxOffset
+condition|)
+block|{
+name|endState
+operator|=
+operator|new
+name|State
+argument_list|()
+expr_stmt|;
+name|endState
+operator|.
+name|setAccept
+argument_list|(
+literal|true
+argument_list|)
+expr_stmt|;
 block|}
 name|pos
 operator|++
@@ -751,6 +833,31 @@ operator|!=
 literal|null
 condition|)
 block|{
+if|if
+condition|(
+name|endState
+operator|!=
+literal|null
+condition|)
+block|{
+name|posData
+operator|.
+name|arriving
+operator|.
+name|addTransition
+argument_list|(
+operator|new
+name|Transition
+argument_list|(
+name|POS_SEP
+argument_list|,
+name|endState
+argument_list|)
+argument_list|)
+expr_stmt|;
+block|}
+else|else
+block|{
 name|posData
 operator|.
 name|arriving
@@ -760,6 +867,7 @@ argument_list|(
 literal|true
 argument_list|)
 expr_stmt|;
+block|}
 block|}
 name|pos
 operator|++
