@@ -3601,11 +3601,6 @@ argument_list|)
 decl_stmt|;
 name|ts
 operator|.
-name|end
-argument_list|()
-expr_stmt|;
-name|ts
-operator|.
 name|close
 argument_list|()
 expr_stmt|;
@@ -3685,11 +3680,6 @@ argument_list|(
 name|ts
 argument_list|)
 decl_stmt|;
-name|ts
-operator|.
-name|end
-argument_list|()
-expr_stmt|;
 name|ts
 operator|.
 name|close
