@@ -3592,6 +3592,11 @@ name|analyzedKey
 operator|=
 literal|""
 expr_stmt|;
+name|boolean
+name|lastRemoved
+init|=
+literal|false
+decl_stmt|;
 for|for
 control|(
 name|int
@@ -3706,6 +3711,10 @@ name|numStopChars
 argument_list|)
 condition|)
 block|{
+name|lastRemoved
+operator|=
+literal|true
+expr_stmt|;
 if|if
 condition|(
 name|preserveSep
@@ -3721,6 +3730,10 @@ block|}
 block|}
 else|else
 block|{
+name|lastRemoved
+operator|=
+literal|false
+expr_stmt|;
 name|analyzedKey
 operator|+=
 name|s
@@ -3749,6 +3762,18 @@ argument_list|,
 literal|""
 argument_list|)
 expr_stmt|;
+if|if
+condition|(
+name|preserveSep
+operator|&&
+name|lastRemoved
+condition|)
+block|{
+name|analyzedKey
+operator|+=
+name|SEP
+expr_stmt|;
+block|}
 comment|// Don't add same surface form more than once:
 if|if
 condition|(
@@ -4056,6 +4081,11 @@ operator|new
 name|StringBuilder
 argument_list|()
 decl_stmt|;
+name|boolean
+name|lastRemoved
+init|=
+literal|false
+decl_stmt|;
 for|for
 control|(
 name|int
@@ -4151,6 +4181,10 @@ name|SEP
 argument_list|)
 expr_stmt|;
 block|}
+name|lastRemoved
+operator|=
+literal|true
+expr_stmt|;
 block|}
 else|else
 block|{
@@ -4160,6 +4194,10 @@ name|append
 argument_list|(
 name|token
 argument_list|)
+expr_stmt|;
+name|lastRemoved
+operator|=
+literal|false
 expr_stmt|;
 block|}
 block|}
@@ -4223,6 +4261,27 @@ block|{
 comment|// Currently suggester can't suggest from the empty
 comment|// string!  You get no results, not all results...
 continue|continue;
+block|}
+if|if
+condition|(
+name|preserveSep
+operator|&&
+operator|(
+name|prefix
+operator|.
+name|endsWith
+argument_list|(
+literal|" "
+argument_list|)
+operator|||
+name|lastRemoved
+operator|)
+condition|)
+block|{
+name|analyzedKey
+operator|+=
+name|SEP
+expr_stmt|;
 block|}
 if|if
 condition|(
@@ -6801,6 +6860,113 @@ operator|.
 name|lookup
 argument_list|(
 literal|"a"
+argument_list|,
+literal|false
+argument_list|,
+literal|3
+argument_list|)
+operator|.
+name|toString
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
+DECL|method|testEndingSpace
+specifier|public
+name|void
+name|testEndingSpace
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|Analyzer
+name|a
+init|=
+operator|new
+name|MockAnalyzer
+argument_list|(
+name|random
+argument_list|()
+argument_list|)
+decl_stmt|;
+name|AnalyzingSuggester
+name|suggester
+init|=
+operator|new
+name|AnalyzingSuggester
+argument_list|(
+name|a
+argument_list|,
+name|a
+argument_list|,
+name|AnalyzingSuggester
+operator|.
+name|PRESERVE_SEP
+argument_list|,
+literal|256
+argument_list|,
+operator|-
+literal|1
+argument_list|)
+decl_stmt|;
+name|suggester
+operator|.
+name|build
+argument_list|(
+operator|new
+name|TermFreqArrayIterator
+argument_list|(
+operator|new
+name|TermFreq
+index|[]
+block|{
+operator|new
+name|TermFreq
+argument_list|(
+literal|"i love lucy"
+argument_list|,
+literal|7
+argument_list|)
+block|,
+operator|new
+name|TermFreq
+argument_list|(
+literal|"isla de muerta"
+argument_list|,
+literal|8
+argument_list|)
+block|,         }
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|"[isla de muerta/8, i love lucy/7]"
+argument_list|,
+name|suggester
+operator|.
+name|lookup
+argument_list|(
+literal|"i"
+argument_list|,
+literal|false
+argument_list|,
+literal|3
+argument_list|)
+operator|.
+name|toString
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|"[i love lucy/7]"
+argument_list|,
+name|suggester
+operator|.
+name|lookup
+argument_list|(
+literal|"i "
 argument_list|,
 literal|false
 argument_list|,
